--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- You may not edit above this line. -->
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -105,6 +105,8 @@
 
       <figure id="cryptogram">
         <!-- You may not edit above this line. -->
+<img src="/midterm-craterellus/img/cryptogram.png" alt="mysterious runes">
+The mysterious runic cryptogram.
 
         <!-- You may not edit below this line. -->
       </figure>
