Tablet layout complete

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <figure id="cryptogram">
         <!-- You may not edit above this line. -->
 <img src="/midterm-craterellus/img/cryptogram.png" alt="mysterious runes">
-The mysterious runic cryptogram.
+<figcaption>The mysterious runic cryptogram.</figcaption>
 
         <!-- You may not edit below this line. -->
       </figure>
